# chorse

./: .gitignore  pyproject.toml  run.py
chorse/: config.py  ssh.py
chorse/imaging/: __init__.py
chorse/nas/: __init__.py
chorse/nipa/: __init__.py  abnormal_urls.txt  config.py  download.py  encoded_urls.txt  encoder.py  export.py  ssh.py  trim.py  upload.py
chorse/path/: __init__.py
chorse/video/: __init__.py
tests/: test_chorse.py
